# varvault

./: .coveragerc  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  resolution.md  setup.cfg  setup.py
src/varvault/: keyring.py  logger.py  minivault.py  utils.py  vault.py  vaultfactory.py  vaultstructs.py
test/: .gitignore  faulty-existing-vault.json  faulty-vault-key-missmatch.json  test_large_scale_vault.py  test_vault.py
tests/: .gitignore  commons.py  existing-vault.json  existing-vault.xml  large-scale-existing-vault.json  notif_reader.py  redis_classes.py  serialization.py  sqlite_classes.py  test_automatic.py  test_concurrency.py  test_infrastructure.py  test_large_scale_vault.py  test_live_update.py  test_logging.py  test_remote_database.py  test_structs.py  test_threadgroup.py  test_vault.py  test_with_varvault.py  test_xml_vault.py
thesis/: redisResource.py  sqliteResource.py
varvault/: __init__.py  factory.py  filehandlers.py  flags.py  keyring.py  logger.py  minivault.py  resource.py  structs.py  subscriber_thread.py  threadgroup.py  utils.py  validator.py  vault.py  vaultfactory.py  vaultflags.py  vaultstructs.py
