[metadata]
name = varvault
version = 1.0.0
author = Calle Holst
author_email = calle.holst@dataductus.se
description = A package that sets up a key-value vault to store and access variables in a global context.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
  Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
  Programming Language :: Python :: 3
  Operating System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >= 3.8

[options.packages.find]
where = src